Adding products and asyncrhonism to the project

--- a/appgameser/src/App.css
+++ b/appgameser/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.iconsContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 15%;
+  align-self: center;
+}
