--- a/appgameser/src/components/NavBar/NavBar.css
+++ b/appgameser/src/components/NavBar/NavBar.css
@@ -36,7 +36,8 @@
 
   .header .logo {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: baseline;
     font-size: 2.5rem;
     color: #fff;
     font-weight: 700 !important;
