Adding Context & Event into the project

--- a/appgameser/src/App.css
+++ b/appgameser/src/App.css
@@ -51,6 +51,11 @@
   }
 }
 
+.cartWidget{
+  color: #fff;
+  align-self: flex-end;
+}
+
 .iconsContainer {
   display: flex;
   justify-content: space-between;
